msa/manifests/company-service/company-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sgi-edu-company-service
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: "/company/list"
spec:
  selector:
    app: sgi-edu-company-service
  type: NodePort
  ports:
    - port: 8080 # 서비스가 생성할 포트  
      targetPort: 8080 # 서비스가 접근할 pod의 포트
      protocol: TCP
